--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,26 @@
-/*.bg{
-    position: relative;
-    background-image: url(/assets/img/bg.jpg);
-    height: 100vh;
-    background-size: cover;
-    background-position: 0 0;
-    background-repeat: repeat-x;
-    animation: animate 15s linear infinite;
-}*/
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Outfit:wght@100&family=Pacifico&family=Poppins:wght@300;400;500;600;700;800&display=swap');
 
-:root{
- --playStop : running;
+:root {
+  --playStop: running;
 }
 
-.spot{
-    --playStop : paused;
+.stop {
+  --playStop: paused;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  border: 0;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 14px;
+  scroll-behavior: smooth;
 }
 
 body{
@@ -23,7 +30,7 @@ body{
     min-height: 100vh;
     background-color: #eaeaf0;
     flex-direction: column;
-    gap: 1rem;
+    gap: 2rem;
 }
 
 .bg{
@@ -87,13 +94,96 @@ span{
 }
 
 span.car{
-    bottom: 15px;
+    bottom: 13px;
     left: 20px;
     font-size: 7em !important;
     -webkit-text-stroke: 2px #000;
     z-index: 10;
     animation: car .3s linear infinite;
     animation-play-state: var(--playStop);
+}
+
+span.people{
+  position: absolute;
+  font-size: 4em !important;
+  z-index: 10;
+  right: 5px;
+  -webkit-text-stroke: 2px #000;
+  bottom: 10px;
+  animation: animateCloud 3.5s linear infinite;
+  animation-delay: calc(-1s * var(2));
+  animation-play-state: var(--playStop);
+}
+
+.faixa span{
+  position: absolute;
+  height: 10px;
+  right: 5px;
+  border-top: .3rem solid white;
+  width: 5rem;
+  bottom: calc(.5rem * var(--i));
+  animation: animateCloud 3.5s linear infinite;
+  animation-delay: calc(-1s * var(2));
+  animation-play-state: var(--playStop);
+}
+
+span.traffic{
+  position: absolute;
+  font-size: 4em !important;
+  z-index: 9;
+  right: 50px;
+  -webkit-text-stroke: 2px #000;
+  bottom: 80px;
+  animation: animateCloud 3.5s linear infinite;
+  animation-delay: calc(-1s * var(2));
+  animation-play-state: var(--playStop);
+  color: gray;
+}
+
+span.traffic::before{
+  content: '';
+  position: absolute;
+  z-index: 4;
+  left: 25px;
+  top: 50px;
+  border-left: .5rem solid;
+  height: 2.5rem;
+  -webkit-text-stroke: 2px #000
+}
+
+span.cor{
+  width: 5.5px;
+  height: 5.5px;
+  left: 267.2px;
+  border-radius: 50%;
+  z-index: 8;
+  animation: animateCloud 3.5s linear infinite;
+  animation-delay: calc(-1s * var(2));
+  animation-play-state: var(--playStop);
+  background-color: yellow;
+}
+
+span.cor.yellow{
+  bottom: 105px;
+  background-color: yellow;
+}
+
+span.cor.green{
+  bottom: 116px;
+  background-color: green;
+}
+
+span.cor.red{
+  bottom: 94px;
+  background: rgb(243,197,189); 
+background: -moz-radial-gradient(center, ellipse cover, rgba(243,197,189,1) 0%, rgba(232,108,87,1) 50%, rgba(234,40,3,1) 51%, rgba(255,102,0,1) 75%, rgba(199,34,0,1) 100%);
+background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(243,197,189,1)), color-stop(50%,rgba(232,108,87,1)), color-stop(51%,rgba(234,40,3,1)), color-stop(75%,rgba(255,102,0,1)), color-stop(100%,rgba(199,34,0,1)));
+background: -webkit-radial-gradient(center, ellipse cover, rgba(243,197,189,1) 0%,rgba(232,108,87,1) 50%,rgba(234,40,3,1) 51%,rgba(255,102,0,1) 75%,rgba(199,34,0,1) 100%); 
+background: -o-radial-gradient(center, ellipse cover, rgba(243,197,189,1) 0%,rgba(232,108,87,1) 50%,rgba(234,40,3,1) 51%,rgba(255,102,0,1) 75%,rgba(199,34,0,1) 100%);
+background: -ms-radial-gradient(center, ellipse cover, rgba(243,197,189,1) 0%,rgba(232,108,87,1) 50%,rgba(234,40,3,1) 51%,rgba(255,102,0,1) 75%,rgba(199,34,0,1) 100%);
+background: radial-gradient(ellipse at center, rgba(243,197,189,1) 0%,rgba(232,108,87,1) 50%,rgba(234,40,3,1) 51%,rgba(255,102,0,1) 75%,rgba(199,34,0,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f3c5bd', endColorstr='#c72200',GradientType=1 );
+
 }
 
 span.cloud{
@@ -122,7 +212,7 @@ span.tree{
 span.mountain{
     position: absolute;
     color: #8b3c23;
-    bottom: 18px;
+    bottom: 16px;
     font-size: 12em !important;
     animation: animateCloud 15s linear infinite;
     animation-delay: calc(-4s * var(--i));
@@ -154,4 +244,35 @@ span.mountain{
     100%{
         transform: translateX(-350px);
     }
+}
+
+input {
+  display: none;
+}
+
+label {
+  cursor: pointer;
+  width: 80px;
+  height: 80px;
+  font-size: 4rem;
+  box-shadow: .25rem .5rem 1rem black;
+  transition: all ease 300ms;
+  border-radius: .5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  background-color: aqua;
+}
+
+label:hover{
+  box-shadow: none;
+}
+
+input:checked+label::after {
+  content: '►';
+}
+
+label::after {
+  content: '❙❙';
 }
